             (+) move mtd_probe to separate module udev;
             (+) move ata_id to separate module udev;
             (+) move collect to separate module udev;
             (+) move scsi_id to separate module udev;
             (+) remove systemd-cryptsetup-generator program;
             (+) remove systemd-cryptsetup program;
             (+) remove systemd-cat program;
        * tests:
             (+) move test-udev to separate module udev;
             (+) move test-libudev to separate module udev;
             (+) remove rules-test.sh;
             (+) remove test-libudev-sym;
             (+) remove test-dhcp-option;
             (+) remove test-dhcp-client;
             (+) remove test-ipv4ll;
        * units:
             (+) add sysctl service;
             (+) remove systemd-sysctl service;
             (+) remove systemd-networkd-wait-online service;
             (+) remove systemd-networkd service;
             (+) remove systemd-resolved service;
             (+) remove systemd-timesyncd service;
             (+) remove systemd-timedated service;
             (+) remove systemd-hostnamed service;
             (+) remove systemd-machined service;
             (+) remove systemd-nspawn@ service;
             (+) remove systemd-localed service;
             (+) remove systemd-vconsole-setup service;
             (+) move systemd-udev-settle service to separate module udev;
             (+) move systemd-udev-trigger service to separate module udev;
             (+) move systemd-udevd service to separate module udev;
             (+) remove systemd-cryptsetup@ service;
             (+) move initrd-udevadm-cleanup-db service to separate module udev;
             (+) remove halt-local service;
             (+) remove rc-local service;
        * targets:
             (+) remove cryptsetup target;
        * other:
             (+) remove ACL support;
             (+) remove udev firmware loading support;