@@ -66,7 +66,6 @@
 /systemd-notify
 /systemd-quotacheck
 /systemd-random-seed
-/systemd-rc-local-generator
 /systemd-readahead
 /systemd-remount-api-vfs
 /systemd-remount-fs
